--- a/style.css
+++ b/style.css
@@ -30,3 +30,28 @@
 .nav-link:hover{
     color:black;
 }
+
+.body-row{
+    padding-top:3rem;
+}
+
+.row-1-body{
+    width:fit-content;
+    display: grid;
+    grid-template-columns:fit-content fit-content fit-content;
+    grid-template-rows: auto;
+    gap: 30px;
+    display: flex;
+}
+
+.row-img{
+    height:29rem;
+}
+
+.p-rows{
+    place-self: center;
+}
+
+.row-1-body{
+    place-self: center;
+}
