--- a/style.css
+++ b/style.css
@@ -1,30 +1,62 @@
+@font-face{
+    font-family: FuturaPT;
+    src: url('FuturaCyrillicLight.ttf');
+}
+
+@font-face{
+    font-family: FuturaPTBook;
+    src: url('FuturaCyrillicBook.ttf');
+}
+
+@font-face{
+    font-family: FuturaPTDemi;
+    src: url('FuturaCyrillicDemi.ttf');
+}
 
 .header-filling{
     width:100rem;
 }
 
-.conte{
-    width:fit-content;
-    display: grid;
-    grid-template-columns: 5rem 9rem 6rem;
-    grid-template-rows: auto;
-    gap: 10px;
-    padding-top: 3.5rem;
+.header-nav{
+    width:100%;
+    display: flex;
 }
 
 .header-nav{
     display: flex;
+    justify-content: space-between;
+}
+
+.body-cont{
+    place-self: center;
+    width:fit-content;
+    padding-top:50px;
+    padding-left:50px;
+    padding-right:50px;
+}
+
+.conte{
+    display: grid;
+    grid-template-columns: 6rem 11rem 7rem;
+    grid-template-rows: auto;
+    padding-top: 3.5rem;
 }
 
 .fill-logo{
+    place-self: left;
     padding-top:2.5rem;
-    padding-left:none !important;
 }
 
 .nav-link{
     font-size: 17px;
-    font-weight:5;
     color:black;
+    font-family: FuturaPT;
+    letter-spacing: .175rem;
+    font-weight: 1;
+}
+
+.p-nav-contact{
+    padding-right:0%;
 }
 
 .nav-link:hover{
@@ -45,14 +77,15 @@
 }
 
 .row-img{
-    height:23.5rem;
-    max-width: 26rem;
+    height:auto;
+    width:100%;
 }
 
 .p-rows{
     place-self: center;
-    font-weight:100;
-    font-size: 17px;
+    font-family: FuturaPT;
+    font-size: 16px;
+    letter-spacing: .275rem;
 }
 
 .row-1-body{
